<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qpmovil.Fragment_ConsultaItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buscaxbarras"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/formato_redondeo_rojo"
                        android:text="@string/Buscar_codigo_Barras"
                        android:textColor="@color/ColorBlanco"
                        android:textSize="16dp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/busca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/Ingresar_codigo_SKU"
                        android:inputType="textPersonName"
                        android:textSize="22dp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buscaxitem"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/formato_redondeo_rojo"
                        android:text="@string/Buscar_codigo_item"
                        android:textColor="@color/ColorBlanco"
                        android:textSize="16dp" />

                </TableRow>


            </TableLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/et_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </TableRow>


            </TableLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Codigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Código"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/et_codigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Color"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/et_Color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Talle"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/et_Talle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/Stock"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/et_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/Precio"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/et_precio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"

                        android:textSize="20dp"
                        android:textStyle="bold|italic" />

                </TableRow>


            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/btt_agregar_carrito"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/formato_redondeo_rojo"
                        android:text="Agregar Item al Carrito"
                        android:textColor="@color/ColorBlanco"
                        android:textSize="16dp" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/stockdetallado"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_marginBottom="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/formato_redondeo_rojo"
                        android:text="@string/Detalle_existencias"
                        android:textColor="@color/ColorBlanco"
                        android:textSize="16dp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>